--- a/views/Landing.ejs
+++ b/views/Landing.ejs
@@ -43,16 +43,16 @@
     <div class="footer-navigation">
         <div class="container">
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 section-footer">
                     <div>
                         <div class="logo-footer-navigation">
 
                         </div>
-                        <div>ADOPTAME</div>
+                        <div><p>ADOPTAME</p></div>
                         <div class="RRSS"></div>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 section-footer">
                     <p>NAVIGATION</p>
                     <ul class="menu-footer-navigation">
                         <li> <a href="">Inicio</a></li>
@@ -63,7 +63,7 @@
                         <li><a href="">FAQ</a></li>
                     </ul>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 section-footer">
                     <p>LEGAL</p>
                     <ul class="menu-footer-navigation">
                         <li><a href="">Terminos y condiciones</a></li>
