pruebas para git

--- a/views/Contact.ejs
+++ b/views/Contact.ejs
@@ -35,9 +35,18 @@
     </header>
 
 
-    <div class="content main-img">
+    <div class="content main-section">
         <!-- -->
-        <img src="/resources/img/dog2.png" class="img-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 prueba cuadro1">este es el cuadro 1</div>
+                <div class="col-md-3 prueba cuadro2">este es el cuadro 2</div>
+                <div class="col-md-3 prueba cuadro3">este es el cuadro 3</div>
+                <div class="col-md-3 prueba cuadro4">este es el cuadro 4</div>
+                <div class="col-md-3 prueba cuadro5">este es el cuadro 5</div>
+                <div class="col-md-3 prueba cuadro6">este es el cuadro 6</div>
+            </div>
+        </div>
     </div>
 
     <!-- el footer tambien deberia ser otro codigo comun a todas las views, copiarlo y pegarlo-->
