--- a/public/css/general.css
+++ b/public/css/general.css
@@ -12,10 +12,12 @@ body ul{
 /*main menu*/
 header{
     position: fixed;
+    top:0;
     height: 4em;
     z-index: 999;
-    background: rgba(255, 255, 255, 0.5);
+    background: rgba(255, 255, 255, 0.3);
     width: 100%;
+    border-bottom: 1px solid rgb(133, 134, 134);
 }
 
 .menu-content{
@@ -51,7 +53,7 @@ header{
 
 /* inicio footer nevigation */
 .footer-navigation{
-    background: rgb(180, 189, 182);
+    background: rgb(180, 189, 182, 0.2);
 }
 
 .footer-navigation ul{
@@ -76,7 +78,49 @@ header{
 
 /*home */
 .main-img{   
-    width: auto;
+   /* min-height: 1000px; 
+    background-image: url("/resources/img/dog2.png");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: auto;*/
 }
 
+.main-section{
+    margin-top: 4em;
+    min-height: 40em;
+}
+
+.prueba{
+    margin: 1em;
+    height: 15em;
+    border: 1px solid black;
+}
+
+
+.cuadro1{
+    background: red;
+}
+
+.cuadro2{
+    background: green;
+}
+
+.cuadro3{
+    background: rgb(12, 185, 216);
+
+}
+
+.cuadro4{
+    /*background: yellow;*/
+}
+
+.cuadro5{
+    /*background: orange;*/
+}
+
+.cuadro6{
+    /*background: black;*/
+}
 /*fin home */
