añadido ayuda.html y ayuda.css

--- a/views/Landing.ejs
+++ b/views/Landing.ejs
@@ -24,7 +24,7 @@
                         <li><a href="">Protectoras</a></li>
                         <li><a href="">Sobre Nosotros</a></li>
                         <li><a href="/Contact.html">Contacto</a></li>
-                        <li><a href="">FAQ</a></li>
+                        <li><a href="/Ayuda.html">Ayuda</a></li>
                     </ul>
                     <div class="icon-login">
                         <img src="/resources/icons/user-login.png" alt="">
@@ -61,7 +61,7 @@
                         <li><a href="">Protectoras</a></li>
                         <li><a href="">Sobre Nosotros</a></li>
                         <li><a href="/Contact.html">Contacto</a></li>
-                        <li><a href="">FAQ</a></li>
+                        <li><a href="/Ayuda.html">Ayuda</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 section-footer">
