Login sin css completo y Header y Footer aparte.
Se ha creado el diseño del login (sin el formato adecuado) y se ha creado un Header y Footer que se llama desde las demás vistas.

--- a/views/Contact.ejs
+++ b/views/Contact.ejs
@@ -11,28 +11,8 @@
 </head>
 
 <body>
-    <!-- el header deberia ser un codigo comun en todas las views-->
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 menu-content">
-                    <div class="logo">  
-                    </div>
-                    <ul class="menu">
-                        <li> <a href="/Home.html">Inicio</a></li>
-                        <li><a href="">Animales</a></li>
-                        <li><a href="">Protectoras</a></li>
-                        <li><a href="">Sobre Nosotros</a></li>
-                        <li><a href="/Contact.html">Contacto</a></li>
-                        <li><a href="">FAQ</a></li>
-                    </ul>
-                    <div class="icon-login">
-                        <img src="/resources/icons/user-login.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
+
+    <%- include('./Header'); %>
 
 
     <div class="content main-section">
@@ -49,40 +29,8 @@
         </div>
     </div>
 
-    <!-- el footer tambien deberia ser otro codigo comun a todas las views, copiarlo y pegarlo-->
-    <div class="footer-navigation">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-4 section-footer">
-                    <div>
-                        <div class="logo-footer-navigation">
 
-                        </div>
-                        <div><p>ADOPTAME</p></div>
-                        <div class="RRSS"></div>
-                    </div>
-                </div>
-                <div class="col-sm-4 section-footer">
-                    <p>NAVIGATION</p>
-                    <ul class="menu-footer-navigation">
-                        <li> <a href="/Home.html">Inicio</a></li>
-                        <li><a href="">Animales</a></li>
-                        <li><a href="">Protectoras</a></li>
-                        <li><a href="">Sobre Nosotros</a></li>
-                        <li><a href="/Contact.html">Contacto</a></li>
-                        <li><a href="">FAQ</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-4 section-footer">
-                    <p>LEGAL</p>
-                    <ul class="menu-footer-navigation">
-                        <li><a href="">Terminos y condiciones</a></li>
-                        <li><a href="">Politica de privacidad</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>    
+    <%- include('./Footer'); %>
 </body>
 
 </html>
