--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -11,68 +11,39 @@
 </head>
 
 <body>
-    <!-- el header deberia ser un codigo comun en todas las views-->
-    <header>
+    <%- include('./Header'); %>
+
+    <!-- cuerpo de la pagina -->
+    <div class="content main-img">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 menu-content">
-                    <div class="logo">  
-                    </div>
-                    <ul class="menu">
-                        <li> <a href="/Home.html">Inicio</a></li>
-                        <li><a href="">Animales</a></li>
-                        <li><a href="">Protectoras</a></li>
-                        <li><a href="">Sobre Nosotros</a></li>
-                        <li><a href="/Contact.html">Contacto</a></li>
-                        <li><a href="">FAQ</a></li>
-                    </ul>
-                    <div class="icon-login">
-                        <a href="/Login.html"><img src="/resources/icons/user-login.png" alt=""></a>
-                    </div>
+                <div class="col-md-offset-4 col-md-4">
+                    <form id="login" class="form-login" action="" method="POST">
+                        <h2>Login:</h2>
+                        <input type="text" id="loginMail" name="loginMail" class="form-control input-sm chat-input" placeholder="Correo electrónico" required/>
+                        </br>
+                        <input type="password" id="loginPassword" name="loginPassword" class="form-control input-sm chat-input" placeholder="Contraseña" required/>
+                        </br>
+                        <div class="radio">
+                            <label><input type="radio" name="tipo" value="Protectora">Protectora</label> 
+                            <label><input type="radio" name="tipo" value="Adoptante">Adoptante</label>
+                            <label><input type="radio" name="tipo" value="Administrador">Administrador</label>
+                        </div>
+                        <div classs="wrapper">
+                            <span class="group-btn">
+                                <!--LO SE, FALTA CSS Y ATRIBUTOS AL BOTON-->
+                                <h2>Lo sé, falta css.</h2>
+                                <button type="submit">Login</button>
+                            </span>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
-    </header>
-
-
-    <div class="content main-section">
-       
+        <!--<img src="/resources/img/dog2.png" class="img-fluid">-->
     </div>
 
-    <!-- el footer tambien deberia ser otro codigo comun a todas las views, copiarlo y pegarlo-->
-    <div class="footer-navigation">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-4 section-footer">
-                    <div>
-                        <div class="logo-footer-navigation">
-
-                        </div>
-                        <div><p>ADOPTAME</p></div>
-                        <div class="RRSS"></div>
-                    </div>
-                </div>
-                <div class="col-sm-4 section-footer">
-                    <p>NAVIGATION</p>
-                    <ul class="menu-footer-navigation">
-                        <li> <a href="/Home.html">Inicio</a></li>
-                        <li><a href="">Animales</a></li>
-                        <li><a href="">Protectoras</a></li>
-                        <li><a href="">Sobre Nosotros</a></li>
-                        <li><a href="/Contact.html">Contacto</a></li>
-                        <li><a href="">FAQ</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-4 section-footer">
-                    <p>LEGAL</p>
-                    <ul class="menu-footer-navigation">
-                        <li><a href="">Terminos y condiciones</a></li>
-                        <li><a href="">Politica de privacidad</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>    
+    <%- include('./Footer'); %>
 </body>
 
 </html>
