Editado footer y header pare que contengan ayuda.html. Ayuda.html hecha completa. Añadido imagenes a resources/img

--- a/views/Header.ejs
+++ b/views/Header.ejs
@@ -1,5 +1,9 @@
 <link rel="stylesheet" href="/css/general.css">
 <link rel="stylesheet" href="/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <header>
     <div class="container">
@@ -13,7 +17,7 @@
                     <li><a href="">Protectoras</a></li>
                     <li><a href="">Sobre Nosotros</a></li>
                     <li><a href="/Contact.html">Contacto</a></li>
-                    <li><a href="">FAQ</a></li>
+                    <li><a href="/Ayuda.html">Ayuda</a></li>
                 </ul>
                 <div class="icon-login">
                     <a href="/Login.html"><img src="/resources/icons/user-login.png" alt=""></a>
