--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -18,7 +18,7 @@
                     <li><a href="">Protectoras</a></li>
                     <li><a href="">Sobre Nosotros</a></li>
                     <li><a href="/Contact.html">Contacto</a></li>
-                    <li><a href="">FAQ</a></li>
+                    <li><a href="/Ayuda.html">Ayuda</a></li>
                 </ul>
             </div>
             <div class="col-sm-4 section-footer">
