--- a/views/Ayuda.ejs
+++ b/views/Ayuda.ejs
@@ -72,7 +72,7 @@
         <div class="row cajatexto centrar">
             <div class=" col-md-7">
                 <p class="justify">Debes saber que una <span class="tnegrita">cría</span> requiere más tiempo para darla de comer, vigilarla, enseñarla y socializarla adecuadamente. Es importante tener paciencia porque causará destrozos y ensuciará la casa hasta que aprenda las normas básicas. Los <span class="tnegrita">adultos</span> son más tranquilos y si han sido correctamente socializados, se puede adaptar perfectamente a tu hogar.</p>
-                <p class="justify">Alguno de los animales en protectoras han sufrido malos tratos y les están enseñando en la protectora a ser más estables y felices. Pero ese trabajo tendrás que seguirlo tú en casa. Es un bonito trabajo cuya recompensa es tener a tu mejor amigo al lado de forma feliz y segura para todos.</p>
+                <p class="justify">Algunos de los animales han sufrido malos tratos y les están enseñando en la protectora a ser más estables y felices. Pero ese trabajo tendrás que seguirlo tú en casa. Es un bonito trabajo cuya recompensa es tener a tu mejor amigo al lado de forma feliz y segura para todos.</p>
                 <p class="justify"><span class="tnegrita">Se desaconseja la adquisición de cachorros de perro o gato a las personas mayores, por su elevada energía y necesidades de ejercicio y juego</span>.</p>
             </div>
             <div class="col-md-4">
