--- a/public/css/general.css
+++ b/public/css/general.css
@@ -25,21 +25,29 @@ header{
     height: max-content;
 }
 .menu{
-    list-style: none;
-    display: flex;
-    height: 4em;
+    overflow: hidden;
 }
 
-.menu li{
-    height: 100%;
-    padding:  0em 2em;
-    display: flex;
-    align-items: center;
-}
+.menu a{
+    float: left;
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
 
-.menu li a{
     color: black;
     text-decoration: none;
+    font-size: 19px;
+}
+
+.menu a:hover{
+    color: rgb(96, 96, 107);
+}
+
+.menu .icon{
+    display: none;
+}
+.menu .login-option{
+    display: none;
 }
 
 .icon-login{
@@ -47,6 +55,35 @@ header{
     justify-content: center;
     align-items: center;
 }
+
+/* Query que oculta las opciones del menú que sobresalen de la pantalla y muestra el icono de expandir */
+@media screen and (max-width: 1000px) {
+    .menu a:not(:first-child) {display: none;}
+    .icon-login{display: none;}
+    .menu a.icon {
+      float: right;
+      display: block;
+    }
+}
+
+/* La clase "responsive" se añade al menu al hacer click en el botón */
+@media screen and (max-width: 1000px) {
+    .menu.responsive {
+        position: relative;
+        background: rgba(255, 255, 255, 0.3);
+    }
+    .menu.responsive a.icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .menu.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+}
+  
 
 /* fin main menu */
 
