--- a/views/Header.ejs
+++ b/views/Header.ejs
@@ -9,20 +9,40 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 menu-content">
-                <div class="logo">  
+                <div class="menu" id="menu_id">
+                    <a href="/Home.html">Inicio</a>
+                    <a href="">Animales</a>
+                    <a href="">Protectoras</a>
+                    <a href="">Sobre Nosotros</a>
+                    <a href="/Contact.html">Contacto</a>
+                    <a href="/Ayuda.html">Ayuda</a>
+                    <a class="login-option" href="/Login.html">Iniciar sesión</a>
+                    <a href="javascript:void(0);" class="icon" onclick="expandMenu()"><img
+                            src="/resources/icons/menu-expand.png" alt=""></a>
                 </div>
-                <ul class="menu">
-                    <li> <a href="/Home.html">Inicio</a></li>
-                    <li><a href="">Animales</a></li>
-                    <li><a href="">Protectoras</a></li>
-                    <li><a href="">Sobre Nosotros</a></li>
-                    <li><a href="/Contact.html">Contacto</a></li>
-                    <li><a href="/Ayuda.html">Ayuda</a></li>
-                </ul>
-                <div class="icon-login">
+                <div class="icon-login" id="login_id">
                     <a href="/Login.html"><img src="/resources/icons/user-login.png" alt=""></a>
                 </div>
             </div>
         </div>
     </div>
 </header>
+
+<script>
+    function expandMenu() {
+        var menu = document.getElementById("menu_id");
+        var login = document.getElementById("login_id");
+
+        if (menu.className === "menu") {
+            menu.className += " responsive";
+        } else {
+            menu.className = "menu";
+        }
+
+        if (login.className === "icon-login") {
+            login.className += " responsive";
+        } else {
+            login.className = "icon-login";
+        }
+    }
+</script>
