redes sociales prueba

--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -7,7 +7,9 @@
 
                     </div>
                     <div><p>ADOPTAME</p></div>
-                    <div class="RRSS"></div>
+                    <div class="RRSS">
+                        <img src="/resource/img/facebook.png">
+                    </div>
                 </div>
             </div>
             <div class="col-sm-4 section-footer">
