foto de facebook

--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -8,7 +8,8 @@
                     </div>
                     <div><p>ADOPTAME</p></div>
                     <div class="RRSS">
-                        <img src="/resource/img/facebook.png">
+                        <li class="col-md-3"></li>
+                        <img class="RRSS" src="/resources/img/facebook.png">
                     </div>
                 </div>
             </div>
