--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -4,13 +4,19 @@
             <div class="col-sm-4 section-footer">
                 <div>
                     <div class="logo-footer-navigation">
-
                     </div>
                     <div><p>ADOPTAME</p></div>
-                    <div class="RRSS">
-                        <li class="col-md-3"></li>
-                        <img class="RRSS" src="/resources/img/facebook.png">
-                    </div>
+                    <ul class="social container row">
+                        <li class="col-md-1">
+              <a href="https://www.instagram.com/adoptame_mascotas/"><img class="RRSS" src="/resources/img/instagram.png"></a>
+                </li>
+                <li class="col-md-1">
+                    <a href="https://www.facebook.com/adoptame.mascotas.52"><img class="RRSS" src="/resources/img/facebook.png"></a>
+            </li>
+            <li class="col-md-1">
+                    <a href="https://twitter.com/adoptamemascot1"><img class="RRSS" src="/resources/img/twitter.jpg"> </a>
+                </li>
+            </ul>
                 </div>
             </div>
             <div class="col-sm-4 section-footer">
