Estilo del menú
Estilo de letra, transiciones, escalas, etcétera.

--- a/views/Header.ejs
+++ b/views/Header.ejs
@@ -9,6 +9,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 menu-content">
+                <img class="logo_negro" src="/resources/img/logo_negro.png">
                 <div class="menu" id="menu_id">
                     <a href="/Home.html">Inicio</a>
                     <a href="">Animales</a>
