--- a/public/css/general.css
+++ b/public/css/general.css
@@ -36,24 +36,44 @@ header{
 
     color: black;
     text-decoration: none;
-    font-size: 19px;
+    font:bold 19px cursive;
+    text-shadow: rgb(202, 228, 223) 2px 2px 4px;
 }
 
 .menu a:hover{
     color: rgb(96, 96, 107);
+    text-decoration: none;
+    transform: scale(1.15);
+    transition: 0.5s;
 }
 
 .menu .icon{
     display: none;
 }
+
 .menu .login-option{
     display: none;
+}
+
+.text{
+    height: 13em;
+}
+
+.logo_negro{
+    display: block;
+    justify-content: center;
+    height: 4em;
 }
 
 .icon-login{
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: transform 0.6s ease-in;
+}
+
+.icon-login:hover{
+    transform: rotate(25deg);
 }
 
 /* Query que oculta las opciones del menú que sobresalen de la pantalla y muestra el icono de expandir */
@@ -96,8 +116,21 @@ header{
     list-style: none;
 }
 .footer-navigation a{
+    display: block;
+    text-align: left;
+    padding: 1px 1px;
+
+    color: rgb(56, 56, 56);
     text-decoration: none;
-    color: rgb(46, 38, 38);
+    font:bold 22px cursive;
+    text-shadow: rgb(202, 228, 223) 2px 2px 4px;
+}
+
+.footer-navigation a:hover{
+    color: rgb(96, 96, 107);
+    text-decoration: none;
+    transform: scale(0.85);
+    transition: 0.5s;
 }
 
 .footer-navigation p{
