--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -20,9 +20,8 @@
                 </div>
             </div>
             <div class="col-sm-4 section-footer">
-                <p>NAVIGATION</p>
                 <ul class="menu-footer-navigation">
-                    <li> <a href="/Home.html">Inicio</a></li>
+                    <li><a href="/Home.html">Inicio</a></li>
                     <li><a href="">Animales</a></li>
                     <li><a href="">Protectoras</a></li>
                     <li><a href="">Sobre Nosotros</a></li>
@@ -31,8 +30,7 @@
                 </ul>
             </div>
             <div class="col-sm-4 section-footer">
-                <p>LEGAL</p>
-                <ul class="menu-footer-navigation">
+                <ul class="menu-footer-navigation textomenu">
                     <li><a href="">Terminos y condiciones</a></li>
                     <li><a href="">Politica de privacidad</a></li>
                 </ul>
