--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -5,7 +5,8 @@
                 <div>
                     <div class="logo-footer-navigation">
                     </div>
-                    <div><p>ADOPTAME</p></div>
+                    <img class="logo" src="/resources/img/logoazul.png">
+                    <img class="logo1" src="/resources/img/logone.png">
                     <ul class="social container row">
                         <li class="col-md-1">
               <a href="https://www.instagram.com/adoptame_mascotas/"><img class="RRSS" src="/resources/img/instagram.png"></a>
