finalización estilos  menú y footer
xd

--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -15,7 +15,7 @@
                     <a href="https://www.facebook.com/adoptame.mascotas.52"><img class="RRSS" src="/resources/img/facebook.png"></a>
             </li>
             <li class="col-md-1">
-                    <a href="https://twitter.com/adoptamemascot1"><img class="RRSS" src="/resources/img/twitter.jpg"> </a>
+                    <a href="https://twitter.com/adoptamemascot1"><img class="RRSS" src="/resources/img/twitter.png"> </a>
                 </li>
             </ul>
                 </div>
