--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -42,7 +42,7 @@
                         </div>
                         <div id="registrate">
                             <!--LINK PARA REGISTRO-->
-                            ¿Aún no tienes cuenta? <a class="btn link" href="">Regístrate</a>
+                            ¿Aún no tienes cuenta? <a class="btn link" href="/sign-up">Regístrate</a>
                         </div>
                     </form>
                     
