Arreglado bug en registro de protectora que marcaba la web como obligatorio y cambio ligero en el menú para que sea más facil de leer el contenido y unificar la tipografía con el resto de la aplicacion. Además aumenté la calidad de los iconos.

--- a/views/SignUpShelter.ejs
+++ b/views/SignUpShelter.ejs
@@ -390,7 +390,7 @@
         function validate_web() {
             var web_input = document.getElementById('web');
 
-            if (test_web(web_input.value)) {
+            if (web_input.value == "" || test_web(web_input.value)) {
                 web_input.setCustomValidity('');
                 change_normal('web', false);
             }
