--- a/public/css/general.css
+++ b/public/css/general.css
@@ -12,11 +12,12 @@ body ul{
 header{
     position: fixed;
     top:0;
-    height: 4em;
+    height: 5.5em;
     z-index: 999;
-    background: rgba(255, 255, 255, 0.3);
+    background: white;
     width: 100%;
-    border-bottom: 1px solid rgb(133, 134, 134);
+    box-shadow: 0 0 10px rgb(0, 0, 0, 0.15);
+    -webkit-backdrop-filter: blur(8px);
 }
 
 .menu-content{
@@ -32,23 +33,27 @@ header{
     float: left;
     display: block;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 22px;
 
-    color: black;
+    color: #4d4d4d;
     text-decoration: none;
-    font:bold 19px cursive;
-    text-shadow: rgb(202, 228, 223) 2px 2px 4px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    margin-top: 12.5px;
+    /*text-shadow: rgb(202, 228, 223) 2px 2px 4px;*/
 }
 
 .menu a:hover{
-    color: rgb(96, 96, 107);
+    color: #1e1e1e;
     text-decoration: none;
-    transform: scale(1.15);
-    transition: 0.5s;
+    transform: scale(1.05);
+    transition: 0.2s;
 }
 
 .menu .icon{
     display: none;
+    margin-top: 4px;
 }
 
 .menu .login-option{
@@ -60,20 +65,22 @@ header{
 }
 
 .logo_negro{
+    margin-top: 20px;
     display: block;
-    justify-content: center;
-    height: 4em;
+    justify-content: right;
+    height: 35px;
 }
 
 .icon-login{
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: transform 0.6s ease-in;
+    margin-top: 13px;
 }
 
 .icon-login:hover{
-    transform: rotate(25deg);
+    transform: rotate(10deg);
+    transition: 0.2s;
 }
 
 /* Query que oculta las opciones del menú que sobresalen de la pantalla y muestra el icono de expandir */
