Añadida la pagina de Quienes somos con datos de relleno.

--- a/views/Header.ejs
+++ b/views/Header.ejs
@@ -14,7 +14,7 @@
                     <a href="/Home.html">Inicio</a>
                     <a href="">Animales</a>
                     <a href="">Protectoras</a>
-                    <a href="">Sobre Nosotros</a>
+                    <a href="/AboutUs.html">Sobre Nosotros</a>
                     <a href="/Contact.html">Contacto</a>
                     <a href="/Ayuda.html">Ayuda</a>
                     <a class="login-option" href="/Login.html">Iniciar sesión</a>
