Listado para rechazar o aceptar solicitudes

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -215,6 +215,15 @@ header{
     text-align: center !important;
 }
 
+.admin-control, .modal-dialog{
+    font-family: 'Bree Serif', serif;
+    font-size: 15px;
+}
+
 .table-admin{
     overflow-x: auto;
+}
+
+.cursor{
+    cursor: pointer;
 }
