fix sobre lios que han hecho gentecilla del team

--- a/views/AboutUs.ejs
+++ b/views/AboutUs.ejs
@@ -14,7 +14,7 @@
 
 <body>
     <%- include('./Header'); %>
-        <div id="content">
+        <div id="content" class="cuadrarHeader">
             <h1 class="encabezado">¿Quienes somos?</h1>
 
             <div class="row cajatexto centrar">
