--- a/views/Ayuda.ejs
+++ b/views/Ayuda.ejs
@@ -20,7 +20,7 @@
     <%- include('./Header'); %>
 	
 	<!-- Mi codigo-->
-    <div id="content">
+    <div id="content" class="cuadrarHeader">
        
         <h1 class="encabezado" id="datos1">Cosas a tener en cuenta antes de adoptar</h1>
 		<div class="row cajatexto centrar">
