--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -21,7 +21,7 @@
     <!-- cuerpo de la pagina -->
     <div class="content main-img">
         <div class="container">
-            <div class="row encabezado">
+            <div class="row cuadrarHeader">
                 <div class="col-md-offset-4 col-md-4">
                     <form id="login" class="form-login cajatexto texto" action="" method="POST">
                         <h2 class="">Bienvenido</h2>
