--- a/views/Landing.ejs
+++ b/views/Landing.ejs
@@ -7,6 +7,7 @@
     <title>Adoptame</title>
     <!-- Siempre que creeis una nueva plantilla ejs, importar las hojas de estilos CSS, en especial la de bootstrap-->
     <link rel="stylesheet" href="/css/general.css">
+    <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
 </head>
 
