--- a/views/AboutUs.ejs
+++ b/views/AboutUs.ejs
@@ -25,7 +25,9 @@
 
                 <div class=" col-md-8 ">
                     <p class="quienes ">
-						 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vehicula ante id congue consectetur. Suspendisse potenti. Pellentesque non risus viverra, aliquet neque sit amet, feugiat leo. Quisque non erat consectetur, gravida purus ac, condimentum massa. Duis blandit velit at molestie venenatis. Nulla quis mauris ex. Donec urna tellus, eleifend non iaculis eget, mollis sed lectus. Duis id nisi enim. Praesent malesuada sem ac tristique aliquet. Vivamus pretium elit nisl, dictum luctus nibh pellentesque sit amet. Mauris sed tempus neque, at laoreet odio. Sed maximus velit euismod odio elementum, vitae dapibus turpis imperdiet. Aliquam egestas eu nulla id imperdiet. Donec velit ligula, placerat nec eros sit amet, lacinia blandit enim. 
+						Somos un grupo de Estudiantes de Ingenieria del software de la UCM.
+						Hemos desarrollado una aplicación para facilitar la comunicacion entre protectoras de animales y potenciales adoptantes para las mascotas.
+						Dividimos la applicacion en usuarios adoptantes y protectoras.
                     </p>
                 </div>
             </div>
@@ -39,7 +41,8 @@
 
                 <div class=" col-md-9">
                     <p class="quienes ">
- Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vehicula ante id congue consectetur. Suspendisse potenti. Pellentesque non risus viverra, aliquet neque sit amet, feugiat leo. Quisque non erat consectetur, gravida purus ac, condimentum massa. Duis blandit velit at molestie venenatis. Nulla quis mauris ex. Donec urna tellus, eleifend non iaculis eget, mollis sed lectus. Duis id nisi enim. Praesent malesuada sem ac tristique aliquet. Vivamus pretium elit nisl, dictum luctus nibh pellentesque sit amet. Mauris sed tempus neque, at laoreet odio. Sed maximus velit euismod odio elementum, vitae dapibus turpis imperdiet. Aliquam egestas eu nulla id imperdiet. Donec velit ligula, placerat nec eros sit amet, lacinia blandit enim. 
+						Las protectoras tendran toda su informacion disponible a todo usuario que quiera adoptar, datos como, direccion, teléfono, correo o mascotas disponibles.
+						Todo esto esta orientado a facilitar la adopción.
                     </p>
                 </div>
                 <div class="col-md-3">
@@ -54,11 +57,10 @@
                 <div class="col-md-4">
                     <img src="./resources/img/perro.jpg" class="img-circle" alt="perrete" width="304" height="250">
                 </div>
-
-
+					
                 <div class=" col-md-8">
                     <p class="quienes ">
-						 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vehicula ante id congue consectetur. Suspendisse potenti. Pellentesque non risus viverra, aliquet neque sit amet, feugiat leo. Quisque non erat consectetur, gravida purus ac, condimentum massa. Duis blandit velit at molestie venenatis. Nulla quis mauris ex. Donec urna tellus, eleifend non iaculis eget, mollis sed lectus. Duis id nisi enim. Praesent malesuada sem ac tristique aliquet. Vivamus pretium elit nisl, dictum luctus nibh pellentesque sit amet. Mauris sed tempus neque, at laoreet odio. Sed maximus velit euismod odio elementum, vitae dapibus turpis imperdiet. Aliquam egestas eu nulla id imperdiet. Donec velit ligula, placerat nec eros sit amet, lacinia blandit enim. 
+						Los adoptantes podran escoger entre todas las mascotas disponibles y contactar a las protectoras de forma cómoda y rápida.
                 </div>
             </div>
         </div>
