--- a/views/AboutUs.ejs
+++ b/views/AboutUs.ejs
@@ -15,6 +15,8 @@
 <body>
     <%- include('./Header'); %>
         <div id="content">
+			<div class=padding>
+        	</div>
             <h1 class="encabezado">¿Quienes somos?</h1>
 
             <div class="row cajatexto centrar">
