Revert "Modificada la barra superior para que tenga un tamaño mas acrode con la web y sustituido la pagina de confirmación por un aviso."
This reverts commit 6fb99869688880287a1efba4a97c1d007798512c.

--- a/views/SignUpConfirmation.ejs
+++ b/views/SignUpConfirmation.ejs
@@ -19,12 +19,12 @@
             <div class="row">
                 <div class="col sign-up-page" style="margin-top: 120px;"> <!--130px-->
                     <h1>¡Gracias por unirte a Adóptame!</h1>
-                    <h2>Ya estás un paso más cerca de dejar huella.</h2>
-                    <img src="/resources/icons/corgi.png" width="450px">
-                    <h2>Para iniciar sesión en la web solo tienes que darle click al icono que se encuentra en la parte superior derecha de todas las páginas. ¡Regala una nueva vida!</h2>
+                    <h2>Te hemos enviado un email de confirmación.</h2>
+                    <img src="/resources/icons/envelope.png" width="450px">
+                    <h2>Revisa tu bandeja de entrada y tu carpeta spam. Si no puedes encontrar tu correo haz click en "Reenviar" para volver a enviarlo.</h2>
                     
                     <div style="margin-top: 30px; margin-bottom: 100px;">
-                        <!--<button id="redend_button" class="button" onclick=""> Inicio</button>-->
+                        <button id="redend_button" class="button" onclick=""> Reenviar</button>
                     </div>
                 </div>
             </div>
