Auto stash before revert of "Merge remote-tracking branch 'origin/dev' into dev"

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -97,7 +97,7 @@ header{
 @media screen and (max-width: 1000px) {
     .menu.responsive {
         position: relative;
-        background: rgba(255, 255, 255, 0.3);
+        background: rgba(255, 255, 255);
     }
     .menu.responsive a.icon {
       position: absolute;
@@ -183,37 +183,8 @@ header{
     min-height: 40em;
 }
 
-.prueba{
-    margin: 1em;
-    height: 15em;
-    border: 1px solid black;
-}
 
 
-.cuadro1{
-    background: red;
-}
-
-.cuadro2{
-    background: green;
-}
-
-.cuadro3{
-    background: rgb(12, 185, 216);
-
-}
-
-.cuadro4{
-    background: pink;
-}
-
-.cuadro5{
-    background: black;
-}
-
-.cuadro6{
-    background: grey;
-}
 /*fin home */
 
 /* admin */
@@ -222,6 +193,23 @@ header{
     text-align: center !important;
 }
 
+.admin-control, .modal-dialog{
+    font-family: 'Bree Serif', serif;
+    font-size: 15px;
+}
+
 .table-admin{
     overflow-x: auto;
+}
+
+.encabezado{
+    padding: 0.5em;
+}
+
+.cuadrarHeader {
+    margin-top: 4em;
+}
+
+.cursor{
+    cursor: pointer;
 }
