--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -133,9 +133,7 @@ label {
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
-}
 
-#text-area-id {
     color: #4d4d4d;
     height: 170px;
     width: 100%;
@@ -150,7 +148,7 @@ label {
     resize: none;
 }
 
-#text-area-id:focus {
+.text-area:focus {
     outline: none !important;
     border: 1px solid #97c1cc;
     box-shadow: 0 0 5px rgba(81, 203, 238, 1);
