Ligeros cambios a la redacción

--- a/views/AboutUs.ejs
+++ b/views/AboutUs.ejs
@@ -44,7 +44,7 @@
                 <div class=" col-md-9">
                     <p class="quienes ">
 						Las protectoras tendran toda su informacion disponible a todo usuario que quiera adoptar, datos como, direccion, teléfono, correo o mascotas disponibles.
-						Todo esto esta orientado a facilitar la adopción.
+						Todo esto esta orientado a facilitar el encuetro encuetroentre los adoptantes y las protectoras
                     </p>
                 </div>
                 <div class="col-md-3">
@@ -63,6 +63,7 @@
                 <div class=" col-md-8">
                     <p class="quienes ">
 						Los adoptantes podran escoger entre todas las mascotas disponibles y contactar a las protectoras de forma cómoda y rápida.
+                        El adoptantes tras contactar a la protectora iniciara con ella el proceso de adopcion.
                 </div>
             </div>
         </div>
