muchos cambios de muchas cosas
login, perfil y mas cositas

--- a/views/SignUpAdopter.ejs
+++ b/views/SignUpAdopter.ejs
@@ -52,6 +52,12 @@
                         <p class="aclaration" style="margin-top: 15px;">Ejemplo: 01/01/2001</p>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col" style="margin-top: 25px;">
+                        <input name="tlf" type="text" maxlength="10" class="floating-input" placeholder=" ">
+                        <label id="date_tag" style="font-weight: 100;">Numero de telefono</label>
+                    </div>
+                </div>
             </div>
 
             <div class="container" style="max-width: 1400px;">
@@ -68,7 +74,6 @@
                         <input name="email" type="email" class="floating-input" placeholder=" " required>
                         <label id="email_tag" style="font-weight: 100;">Correo electrónico</label>
                         <span id="email_asterisk" class="mandatory">*</span>
-                        <p class="aclaration" style="margin-top: 15px;">Recibirás un correo de confirmación</p>
                     </div>
                 </div>
                 <div class="row">
