--- a/views/Header.ejs
+++ b/views/Header.ejs
@@ -18,13 +18,20 @@
                     <a href="/AboutUs.html">Sobre Nosotros</a>
                     <a href="/Contact.html">Contacto</a>
                     <a href="/Ayuda.html">Ayuda</a>
+                    <% if ( login ) { %>
+                    <a href="/profile"> tu perfil</a>
+                    <a href="/Logout" class="logout">desconectar</a>
+                    <% } %>
                     <a class="login-option" href="/Login.html">Iniciar sesión</a>
                     <a href="javascript:void(0);" class="icon" onclick="expandMenu()"><img
                             src="/resources/icons/menu-expand2.png" width="40px" alt=""></a>
                 </div>
-                <div class="icon-login" id="login_id">
+               
+                    <% if ( !login ) { %>
+                        <div class="icon-login" id="login_id">
                     <a href="/Login.html"><img src="/resources/icons/user-login2.png" height="27px" alt=""></a>
                 </div>
+                    <% } %>
             </div>
         </div>
     </div>
