--- a/views/SignUpShelter.ejs
+++ b/views/SignUpShelter.ejs
@@ -106,6 +106,12 @@
                 </div>
                 <div class="row">
                     <div class="col" style="margin-top: 25px;">
+                        <input name="tlf" type="text" maxlength="10" class="floating-input" placeholder=" ">
+                        <label id="date_tag" style="font-weight: 100;">Numero de telefono</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col" style="margin-top: 25px;">
                         <input name="email" type="email" class="floating-input" placeholder=" " required>
                         <label id="email_tag" style="font-weight: 100;">Correo electrónico</label>
                         <span id="email_asterisk" class="mandatory">*</span>
